# kmplot

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KmPlot.kdevelop  KmPlot.kdevelop.filelist  Makefile.am  README.md  TODO  config-kmplot.h.cmake  kmplot.appdata.xml  kmplot.kdevprj  org.kde.kmplot.appdata.xml  snapcraft.yaml
doc/: CMakeLists.txt  commands.docbook  configuration.docbook  credits.docbook  dcop.docbook  developer.docbook  firststeps.docbook  index.docbook  install.docbook  introduction.docbook  man-kmplot.1.docbook  menu.docbook  reference.docbook  using.docbook
icons/: CMakeLists.txt  Makefile.am  crsc-app-kmplot.svgz  hisc-app-kmplot.svgz  oxsc-apps-kmplot.svgz  sc-apps-kmplot.svgz
icons/actions/: CMakeLists.txt  Makefile.am  crsc-action-deriv_func.svgz  crsc-action-editconstants.svgz  crsc-action-functionhelp.svgz  crsc-action-integral_func.svgz  crsc-action-kmplot-deriv_func.svgz  crsc-action-ksys1.svgz  crsc-action-ksys2.svgz  crsc-action-ksys3.svgz  crsc-action-maximum.svgz  crsc-action-newfunction.svgz  crsc-action-newparametric.svgz  crsc-action-newpolar.svgz  hisc-action-editplots.svgz  hisc-action-functionhelp.svgz  hisc-action-ksys3.svgz  hisc-action-minimum.svgz  hisc-action-newfunction.svgz  hisc-action-newparametric.svgz
kmplot/: AttrDlg.cpp  AttrDlg.h  AttrDlgData.ui  BezWnd.cpp  BezWnd.h  BezWndData.ui  CMakeLists.txt  FktDlg.cpp  FktDlg.h  FktDlgData.ui  KOptDlg.cpp  KOptDlg.h  KOptDlgData.ui  KoordDlg.cpp  KoordDlg.h  KoordDlgData.ui  MainDlg.cpp  MainDlg.h  MainDlgIface.h  Mainpage.dox  Makefile.am  Messages.sh  RstDlg.cpp  RstDlg.h  RstDlgData.ui  SkalDlg.cpp  SkalDlg.h  SkalDlgData.ui  SwDlg.cpp  SwDlg.h  SwDlgData.ui  View.cpp  View.h  Viewiface.h  calculator.cpp  calculator.h  constants.cpp  constants.h  constantseditor.ui  coordsconfigdialog.cpp  (+134 more)
pics/: Makefile.am
po/af/: kmplot.po
po/ar/: kmplot.po
po/be/: kmplot.po
po/bg/: kmplot.po
po/bn/: kmplot.po
po/br/: kmplot.po
po/bs/: kmplot.po
po/ca/: kmplot.po
po/ca/docs/kmplot/: index.docbook  man-kmplot.1.docbook
po/ca@valencia/: kmplot.po
po/cs/: kmplot.po
po/cy/: kmplot.po
po/da/: kmplot.po
po/da/docs/kmplot/: credits.docbook  developer.docbook
po/de/: kmplot.po
po/de/docs/kmplot/: index.docbook  man-kmplot.1.docbook
po/el/: kmplot.po
po/en_GB/: kmplot.po
po/en_GB/docs/kmplot/: commands.docbook  configuration.docbook  credits.docbook  developer.docbook  firststeps.docbook  install.docbook  introduction.docbook  reference.docbook  using.docbook
po/eo/: kmplot.po
po/es/: kmplot.po
po/es/docs/kmplot/: commands.docbook  configuration.docbook  credits.docbook  dcop.docbook  developer.docbook  firststeps.docbook  index.docbook  install.docbook  introduction.docbook  man-kmplot.1.docbook  reference.docbook  using.docbook
po/et/: kmplot.po
po/et/docs/kmplot/: commands.docbook  configuration.docbook  credits.docbook  dcop.docbook  developer.docbook  firststeps.docbook  index.docbook  install.docbook  introduction.docbook  man-kmplot.1.docbook  reference.docbook  using.docbook
po/eu/: kmplot.po
po/fa/: kmplot.po
po/fi/: kmplot.po
po/fr/: kmplot.po
po/fr/docs/kmplot/: commands.docbook  configuration.docbook  credits.docbook  dcop.docbook  developer.docbook  firststeps.docbook  index.docbook  install.docbook  introduction.docbook  man-kmplot.1.docbook  reference.docbook  using.docbook
po/ga/: kmplot.po
po/gl/: kmplot.po
po/gl/docs/kmplot/: commands.docbook  configuration.docbook  credits.docbook  dcop.docbook  developer.docbook  firststeps.docbook  index.docbook  install.docbook  introduction.docbook  man-kmplot.1.docbook  reference.docbook  using.docbook
po/he/: kmplot.po
po/hi/: kmplot.po
po/hne/: kmplot.po
po/hr/: kmplot.po
po/hu/: kmplot.po
po/hu/docs/kmplot/: developer.docbook  install.docbook
po/ia/: kmplot.po
po/is/: kmplot.po
po/it/: kmplot.po
po/it/docs/kmplot/: commands.docbook  configuration.docbook  credits.docbook  dcop.docbook  developer.docbook  firststeps.docbook  index.docbook  install.docbook  introduction.docbook  man-kmplot.1.docbook  reference.docbook  using.docbook
po/ja/: kmplot.po
po/ka/: kmplot.po
po/kk/: kmplot.po
po/km/: kmplot.po
po/ko/: kmplot.po
po/lt/: kmplot.po
po/lv/: kmplot.po
po/mai/: kmplot.po
po/mk/: kmplot.po
po/ml/: kmplot.po
po/mr/: kmplot.po
po/ms/: kmplot.po
po/nb/: kmplot.po
po/nds/: kmplot.po
po/ne/: kmplot.po
po/nl/: kmplot.po
po/nl/docs/kmplot/: commands.docbook  configuration.docbook  credits.docbook  dcop.docbook  developer.docbook  firststeps.docbook  index.docbook  install.docbook  introduction.docbook  man-kmplot.1.docbook  reference.docbook  using.docbook
po/nn/: kmplot.po
po/oc/: kmplot.po
po/pa/: kmplot.po
po/pl/: kmplot.po
po/pl/docs/kmplot/: commands.docbook  configuration.docbook  credits.docbook  dcop.docbook  developer.docbook  firststeps.docbook  index.docbook  install.docbook  introduction.docbook  man-kmplot.1.docbook  reference.docbook  using.docbook
po/pt/: kmplot.po
po/pt/docs/kmplot/: commands.docbook  configuration.docbook  credits.docbook  dcop.docbook  developer.docbook  firststeps.docbook  index.docbook  install.docbook  introduction.docbook  man-kmplot.1.docbook  reference.docbook  using.docbook
po/pt_BR/: kmplot.po
po/pt_BR/docs/kmplot/: commands.docbook  configuration.docbook  credits.docbook  dcop.docbook  developer.docbook  firststeps.docbook  index.docbook  install.docbook  introduction.docbook  man-kmplot.1.docbook  reference.docbook  using.docbook
po/ro/: kmplot.po
po/ru/: kmplot.po
po/ru/docs/kmplot/: commands.docbook  configuration.docbook  credits.docbook  dcop.docbook  developer.docbook  index.docbook  (+6 more)
po/sa/: kmplot.po
po/se/: kmplot.po
po/si/: kmplot.po
po/sk/: kmplot.po
po/sl/: kmplot.po
po/sq/: kmplot.po
po/sv/: kmplot.po
po/ta/: kmplot.po
po/tg/: kmplot.po
po/tr/: kmplot.po
po/ug/: kmplot.po
po/uk/: kmplot.po
po/vi/: kmplot.po
po/xh/: kmplot.po
po/zh_CN/: kmplot.po
po/zh_TW/: kmplot.po
(+16 files in other folders)
